[package]
name = "htree-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.4.1"
clap = { version = "4.3.19", features = ["derive"] }
tokio = { version = "1.29.1", features = [ "macros", "rt-multi-thread", "fs", "net" ] }
